# eos

./: .deepsource.toml  .gitignore  .gitmodules  CMakeLists.txt  pipeline.jsonc  vcpkg.json
.cicd/: build.sh
libraries/: CMakeLists.txt
libraries/chain/: CMakeLists.txt  combined_database.cpp  controller.cpp
libraries/chain/include/eosio/chain/: controller.hpp
libraries/chain_kv/: CMakeLists.txt
plugins/blockvault_client_plugin/: CMakeLists.txt
plugins/chain_plugin/: chain_plugin.cpp
plugins/wallet_plugin/: CMakeLists.txt
programs/rodeos/: CMakeLists.txt
scripts/: serial-test.sh
tests/: CMakeLists.txt
unittests/: snapshot_tests.cpp
vcpkg-ports/gmp/: portfile.cmake  vcpkg-cmake-wrapper.cmake
vcpkg-ports/llvm/: portfile.cmake
vcpkg-ports/yubihsm/: 0002_fix_pkg_search_module.patch  0003_install_static_lib.patch  portfile.cmake
